# BioMesh

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Makefile  PDB_Parser_README.md  README.md  README_PDB.md  compile_and_run.sh  main.cpp  pdb_example  pdb_example.cpp  pdb_parser  pdb_parser.cpp  pdb_parser.h  pdb_reader  pdb_reader.cpp  pdb_reader.h
cmake/: PDBReaderConfig.cmake.in
examples/: CMakeLists.txt  advanced_usage.cpp  atom_example.cpp  basic_usage.cpp  enhanced_bbox_example.cpp  main.cpp  pdb_example.cpp  pdb_viewer.cpp
include/: Atom.h  AtomBuilder.h  BoundingBox.h  PDBReader.h
include/biomesh/: atom.h  atom_builder.h  atomic_spec.h  atomic_spec_table.h  biomesh.h  bounding_box.h  exceptions.h  molecule.h  pdb_reader.h
src/: Atom.cpp  AtomBuilder.cpp  BoundingBox.cpp  PDBReader.cpp  atom_builder.cpp  atomic_spec_table.cpp  bounding_box.cpp  molecule.cpp  pdb_reader.cpp
tests/: atom_tests.cpp  enhanced_bounding_box_tests.cpp  integration_tests.cpp  test_atom.cpp  test_core.cpp  test_generator.cpp  test_pdbreader.cpp  unit_tests.cpp
